src/test/deca/syntax/valid/created/testOpArith/divideIntInt.deca
// Description :
//    Test de la division d'un entier par un entier
//
// Resultats :
//    Ok

{
    int x = 10 / 2;
    int y;
    y = 10 / 2;
}
