src/test/deca/syntax/invalid/created/RecognitionErrors/oversizedint.deca
// Description :
//    Test invalide : Tentative de stocker un entier trop grand dans un registre
//
// Résultats :
//    Erreur syntaxique
//    Ligne 9:  InvalidValueException: Integer too large

{
    int x = 111111111111111111111111111111111111111111111111111111111111111111111111111111111;
}

